# tracklet

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.autobuild/: config.md  loop_state.md
.autobuild/proposals/: 2026-06-19-deferred-fetch-carry-not-spin.md  2026-06-19-generated-output-gitignore-verify-pokayoke.md  2026-06-19-kaizen-ledger-never-appended-by-hansei.md  2026-06-19-kaizen-ledger-one-time-backfill.md  2026-06-19-large-artifact-stream-extract-pokayoke.md  2026-06-19-loop-state-monolith-reread-muda.md  2026-06-19-milestone-boundary-fresh-plan-tick-class.md  2026-06-19-no-header-wcs-empirical-offset-pattern.md  2026-06-19-per-milestone-plan-map.md  2026-06-19-real-frame-acquisition-checklist.md  2026-06-19-state-mutation-without-decisions-triple.md
.github/workflows/: ci.yml
.tracklet/: loop_state.md
config/: default_scene.toml
data/catalogue/: gaia_ra133.860_decm42.593.csv  gaia_ra35.528_dec26.548.csv
data/tle/: iss_20260617.txt
scripts/: _smoke_solve.py  build_showcase.py  clean_room_reproduce.sh  fetch_fixtures.py  install_indexes.sh
showcase/: NOTICE  index.html
showcase/data/: m1_result.json
src/tracklet/: __init__.py  __main__.py  _env.py  detect_streak.py  ingest.py  measure_position.py  realgate.py  realtruth.py  render.py  report.py  run.py  scene.py  score.py  solve_pointing.py  tdm.py
tests/: test_ci_workflow.py  test_detect_streak.py  test_env.py  test_fetch_fixtures.py  test_golden_e2e.py  test_ingest.py  test_install_indexes.py  test_measure_position.py  test_packaging.py  test_real_fixtures.py  test_real_image_e2e.py  test_real_report.py  test_realgate.py  test_realtruth.py  test_render.py  test_report.py  test_run.py  test_run_image.py  test_scene.py  test_score.py  test_seal.py  test_showcase.py  test_smoke_import.py  test_solve_pointing.py  test_tdm.py
tests/fixtures/real/: PROVENANCE.md  bluewalker3_53807.tle  fetch.sh  meta.toml
